@@ -30,17 +30,18 @@ importFrom(GOSemSim,termSim)
 importFrom(ggplot2,"%+%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
-importFrom(ggplot2,opts)
+importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_fill_continuous)
 importFrom(ggplot2,scale_fill_gradient)
 importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_discrete)
-importFrom(ggplot2,theme_blank)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
-importFrom(ggplot2,theme_text)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(igraph,"E<-")
